src/snapshots/blog__snapshot@images__2016-04-MIR__nzd-flags.svg.snap
---
source: src/lib.rs
expression: content
input_file: site/images/2016-04-MIR/nzd-flags.svg
snapshot_kind: text
---
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xl="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 560 348" width="560pt" height="29pc" xmlns:dc="http://purl.org/dc/elements/1.1/"><metadata> Produced by OmniGraffle 6.5.2 <dc:date>2016-04-19 21:30:07 +0000</dc:date></metadata><defs><font-face font-family="Courier New" font-size="12" panose-1="2 7 6 9 2 2 5 2 4 4" units-per-em="1000" underline-position="-232.91016" underline-thickness="100.097656" slope="0" x-height="443.35938" cap-height="591.79688" ascent="832.51953" descent="-300.29297" font-weight="bold"><font-face-src><font-face-name name="CourierNewPS-BoldMT"/></font-face-src></font-face><font-face font-family="Courier New" font-size="12" panose-1="2 7 3 9 2 2 5 2 4 4" units-per-em="1000" underline-position="-232.91016" underline-thickness="41.015625" slope="0" x-height="422.85156" cap-height="571.28906" ascent="832.51953" descent="-300.29297" font-weight="500"><font-face-src><font-face-name name="CourierNewPSMT"/></font-face-src></font-face><marker orient="auto" overflow="visible" markerUnits="strokeWidth" id="FilledArrow_Marker" viewBox="-1 -4 10 8" markerWidth="10" markerHeight="8" color="black"><g><path d="M 8 0 L 0 -3 L 0 3 Z" fill="currentColor" stroke="currentColor" stroke-width="1"/></g></marker><font-face font-family="Helvetica" font-size="12" units-per-em="1000" underline-position="-75.683594" underline-thickness="49.316406" slope="0" x-height="522.94922" cap-height="717.28516" ascent="770.01953" descent="-229.98047" font-weight="500"><font-face-src><font-face-name name="Helvetica"/></font-face-src></font-face></defs><g stroke="none" stroke-opacity="1" stroke-dasharray="none" fill="none" fill-opacity="1"><title>nzd-flags</title><g><title>Layer 1</title><rect x="26" y="56" width="185" height="27" fill="white"/><rect x="26" y="56" width="185" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(31 62.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="bold" x="1.0859375" y="10" textLength="21.603516">if </tspan><tspan font-family="Courier New" font-size="12" font-weight="500" x="22.689453" y="10" textLength="151.22461">some_condition(&amp;data)</tspan></text><rect x="271" y="56" width="207" height="27" fill="white"/><rect x="271" y="56" width="207" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(276 62.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="500" x="4.8847656" y="10" textLength="187.23047">send_to_other_thread(data)</tspan></text><line x1="211.5" y1="69.499983" x2="261.1" y2="69.499983" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><line x1="132.07017" y1="83.357234" x2="198.23996" y2="150.92676" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><rect x="143.5" y="158" width="185" height="27" fill="white"/><rect x="143.5" y="158" width="185" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(148.5 164.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="500" x="47.893555" y="10" textLength="79.21289">post_send()</tspan></text><rect x="143.5" y="185" width="185" height="27" fill="white"/><rect x="143.5" y="185" width="185" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(148.5 191.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="bold" x="26.290039" y="10" textLength="14.402344">if</tspan><tspan font-family="Courier New" font-size="12" font-weight="500" x="40.692383" y="10" textLength="108.01758"> data_is_owned?</tspan></text><rect x="143.5" y="249" width="185" height="27" fill="white"/><rect x="143.5" y="249" width="185" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(148.5 255.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="bold" x="65.896484" y="10" textLength="43.20703">return</tspan></text><line x1="350.4317" y1="110.248" x2="275.42977" y2="153.08966" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(225.5 55.11442)" fill="black"><tspan font-family="Helvetica" font-size="12" font-weight="500" x=".16113281" y="11" textLength="20.677734">true</tspan></text><text transform="translate(126 109)" fill="black"><tspan font-family="Helvetica" font-size="12" font-weight="500" x=".32617188" y="11" textLength="25.347656">false</tspan></text><rect x="26" y="29" width="185" height="27" fill="white"/><rect x="26" y="29" width="185" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(31 35.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="500" x="15.488281" y="10" textLength="115.21875">data_is_owned = </tspan><tspan font-family="Courier New" font-size="12" font-weight="bold" x="130.70703" y="10" textLength="28.804688">true</tspan></text><rect x="271" y="83" width="207" height="27" fill="white"/><rect x="271" y="83" width="207" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(276 89.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="500" x="22.887695" y="10" textLength="115.21875">data_is_owned = </tspan><tspan font-family="Courier New" font-size="12" font-weight="bold" x="138.106445" y="10" textLength="36.00586">false</tspan></text><rect x="394" y="185" width="94" height="27" fill="white"/><rect x="394" y="185" width="94" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(399 191.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="bold" x="5.9941406" y="10" textLength="28.804688">drop</tspan><tspan font-family="Courier New" font-size="12" font-weight="500" x="34.798828" y="10" textLength="43.20703">(data)</tspan></text><line x1="328.5" y1="198.5" x2="384.1" y2="198.49999" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(344.97059 184.11443)" fill="black"><tspan font-family="Helvetica" font-size="12" font-weight="500" x=".16113281" y="11" textLength="20.677734">true</tspan></text><line x1="236" y1="212" x2="236" y2="239.1" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(247.25616 220.2353)" fill="black"><tspan font-family="Helvetica" font-size="12" font-weight="500" x=".32617188" y="11" textLength="25.347656">false</tspan></text></g></g></svg>
