src/snapshots/blog__snapshot@images__2016-04-MIR__send_if2.svg.snap
---
source: src/lib.rs
expression: content
input_file: site/images/2016-04-MIR/send_if2.svg
snapshot_kind: text
---
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xl="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 551 304" width="551pt" height="304pt" xmlns:dc="http://purl.org/dc/elements/1.1/"><metadata> Produced by OmniGraffle 6.5.2 <dc:date>2016-04-19 21:30:07 +0000</dc:date></metadata><defs><font-face font-family="Courier New" font-size="12" panose-1="2 7 6 9 2 2 5 2 4 4" units-per-em="1000" underline-position="-232.91016" underline-thickness="100.097656" slope="0" x-height="443.35938" cap-height="591.79688" ascent="832.51953" descent="-300.29297" font-weight="bold"><font-face-src><font-face-name name="CourierNewPS-BoldMT"/></font-face-src></font-face><font-face font-family="Courier New" font-size="12" panose-1="2 7 3 9 2 2 5 2 4 4" units-per-em="1000" underline-position="-232.91016" underline-thickness="41.015625" slope="0" x-height="422.85156" cap-height="571.28906" ascent="832.51953" descent="-300.29297" font-weight="500"><font-face-src><font-face-name name="CourierNewPSMT"/></font-face-src></font-face><marker orient="auto" overflow="visible" markerUnits="strokeWidth" id="FilledArrow_Marker" viewBox="-1 -4 10 8" markerWidth="10" markerHeight="8" color="black"><g><path d="M 8 0 L 0 -3 L 0 3 Z" fill="currentColor" stroke="currentColor" stroke-width="1"/></g></marker><font-face font-family="Helvetica" font-size="12" units-per-em="1000" underline-position="-75.683594" underline-thickness="49.316406" slope="0" x-height="522.94922" cap-height="717.28516" ascent="770.01953" descent="-229.98047" font-weight="500"><font-face-src><font-face-name name="Helvetica"/></font-face-src></font-face></defs><g stroke="none" stroke-opacity="1" stroke-dasharray="none" fill="none" fill-opacity="1"><title>send_if2</title><g><title>Layer 1</title><rect x="27" y="35" width="185" height="27" fill="white"/><rect x="27" y="35" width="185" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(32 41.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="bold" x="1.0859375" y="10" textLength="21.603516">if </tspan><tspan font-family="Courier New" font-size="12" font-weight="500" x="22.689453" y="10" textLength="151.22461">some_condition(&amp;data)</tspan></text><rect x="272" y="35" width="207" height="27" fill="white"/><rect x="272" y="35" width="207" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(277 41.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="500" x="4.8847656" y="10" textLength="187.23047">send_to_other_thread(data)</tspan></text><line x1="212.5" y1="48.499983" x2="262.1" y2="48.499983" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><line x1="119.500004" y1="62.5" x2="119.500004" y2="101.1" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><rect x="27" y="111" width="185" height="27" fill="white"/><rect x="27" y="111" width="185" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(32 117.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="500" x="37.091797" y="10" textLength="100.816406">process(&amp;data)</tspan></text><rect x="27" y="138" width="185" height="27" fill="white"/><rect x="27" y="138" width="185" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(32 144.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="bold" x="51.49414" y="10" textLength="28.804688">drop</tspan><tspan font-family="Courier New" font-size="12" font-weight="500" x="80.29883" y="10" textLength="43.20703">(data)</tspan></text><rect x="144.5" y="204.5" width="185" height="27" fill="white"/><rect x="144.5" y="204.5" width="185" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(149.5 211)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="bold" x="65.896484" y="10" textLength="43.20703">return</tspan></text><line x1="340.99997" y1="138" x2="275.1595" y2="197.84137" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(226.5 34.11442)" fill="black"><tspan font-family="Helvetica" font-size="12" font-weight="500" x=".16113281" y="11" textLength="20.677734">true</tspan></text><text transform="translate(127 79.5)" fill="black"><tspan font-family="Helvetica" font-size="12" font-weight="500" x=".32617188" y="11" textLength="25.347656">false</tspan></text><line x1="150.33333" y1="165" x2="198.08471" y2="198.78232" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><rect x="272" y="111" width="207" height="27" fill="white"/><rect x="272" y="111" width="207" height="27" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/><text transform="translate(277 117.5)" fill="black"><tspan font-family="Courier New" font-size="12" font-weight="bold" x="62.49414" y="10" textLength="28.804688">drop</tspan><tspan font-family="Courier New" font-size="12" font-weight="500" x="91.29883" y="10" textLength="43.20703">(data)</tspan></text><line x1="375.5" y1="62" x2="375.5" y2="101.1" marker-end="url(#FilledArrow_Marker)" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></g></g></svg>
